bug to solve: - question saved in db correctly, deserialization does not work correctly