@@ -1,5 +1,6 @@
 package ch.supsi.service.folder;
 
+import ch.supsi.mapper.FolderMapper;
 import ch.supsi.model.api.Course;
 import ch.supsi.model.api.Folder;
 import ch.supsi.model.dto.api.FolderDTO;
@@ -9,12 +10,15 @@ import jakarta.inject.Inject;
 import jakarta.ws.rs.NotFoundException;
 import org.bson.types.ObjectId;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class FolderService implements IFolderService {
 
     @Inject
     CourseRepository courseRepository;
+
+    private final FolderMapper folderMapper = FolderMapper.getInstance();
 
     @Override
     public List<FolderDTO> getFoldersInCourse(ObjectId courseId) {
@@ -23,8 +27,8 @@ public class FolderService implements IFolderService {
             throw new NotFoundException("Course not found");
         }
         return course.getFolders().stream()
-                .map(FolderDTO::fromEntity)
-                .toList();
+                .map(folderMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -36,7 +40,7 @@ public class FolderService implements IFolderService {
 
         return course.getFolders().stream()
                 .filter(f -> f.getId().equals(folderId))
-                .map(FolderDTO::fromEntity)
+                .map(folderMapper::toDTO)
                 .findFirst()
                 .orElseThrow(() -> new NotFoundException("Folder not found in course"));
     }
@@ -48,11 +52,11 @@ public class FolderService implements IFolderService {
             throw new NotFoundException("Course not found");
         }
 
-        Folder folder = folderDTO.toEntity();
+        Folder folder = folderMapper.toEntity(folderDTO);
 
         course.getFolders().add(folder);
         this.courseRepository.update(course);
 
-        return FolderDTO.fromEntity(folder);
+        return folderMapper.toDTO(folder);
     }
 }
